--- a/index.html
+++ b/index.html
@@ -62,13 +62,12 @@ siempre de forma correcta:</h2>
         coinciden, se muestra un mensaje al usuario diciéndole que la letra que ha indicado no es
         correcta. En otro caso, se muestra un mensaje indicando que el número y la letra de DNI
         son correctos.
-        EJERCICIO 5
-        El factorial de un número entero n es una operación matemática que consiste en multiplicar
-        todos los factores n x (n-1) x (n-2) x ... x 1. Así, el factorial de 5 (escrito como 5!) es igual a:
-        5! = 5 x 4 x 3 x 2 x 1 = 120
-        Utilizando la estructura for, crear un script que calcule el factorial de un número entero.
     </h2>
 
+    <input id="dni" type="number" placeholder="Ingrese su dni">
+
+    <input type="text" placeholder="Ingrese la letra de su dni">
+    
     <button onclick="ejercicio4()">Ejecutar</button> 
 
     <script src="index.js"></script>
