--- a/index.html
+++ b/index.html
@@ -86,5 +86,18 @@ Utilizando la estructura for, crear un script que calcule el factorial de un nú
 
     <script src="index.js"></script>
 
+    <h2>
+        Ejercicio6
+
+Escribir el código de una función a la que se pasa como parámetro un número entero y
+devuelve como resultado una cadena de texto que indica si el número es par o impar.
+Mostrar por pantalla el resultado devuelto por la función.
+
+    </h2>
+
+    <button onclick="ejercicio6()">Ejecutar</button> 
+
+    <script src="index.js"></script>
+
 </body>
 </html>
