--- a/index.html
+++ b/index.html
@@ -99,5 +99,19 @@ Mostrar por pantalla el resultado devuelto por la función.
 
     <script src="index.js"></script>
 
+    <h2>
+        Ejercicio7
+
+        Definir una función que muestre información sobre una cadena de texto que se le pasa
+    como argumento. A partir de la cadena que se le pasa, la función determina si esa cadena
+    está formada sólo por mayúsculas, sólo por minúsculas o por una mezcla de ambas.
+
+    </h2>
+
+    <button onclick="ejercicio7()">Ejecutar</button> 
+
+    <script src="index.js"></script>
+
+
 </body>
 </html>
