--- a/index.html
+++ b/index.html
@@ -112,6 +112,19 @@ Mostrar por pantalla el resultado devuelto por la función.
 
     <script src="index.js"></script>
 
+    <h2>
+        Ejercicio8
+
+        Definir una función que determine si la cadena de texto que se le pasa como parámetro es
+un palíndromo, es decir, si se lee de la misma forma desde la izquierda y desde la derecha.
+Ejemplo de palíndromo complejo: "La ruta nos aporto otro paso natural".
+
+    </h2>
+
+    <button onclick="ejercicio8()">Ejecutar</button> 
+
+    <script src="index.js"></script>
+
 
 </body>
 </html>
