--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@ Ejemplo de palíndromo complejo: "La ruta nos aporto otro paso natural".
 
     </h2>
 
-    <button onclick="ejercicio8()">Ejecutar</button> 
-
+    <button onclick="ejercicio8()">Ejecutar 8</button>
     <script src="index.js"></script>
 
 
