--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@ Mostrar por pantalla el resultado devuelto por la función.
         Ejercicio8
 
         Definir una función que determine si la cadena de texto que se le pasa como parámetro es
-<<<<<<< HEAD
-un palíndromo, es decir, si se lee de la luis rompeme el culo  misma forma desde la izquierda y desde la derecha.
-=======
+
 un palíndromo, es decir, si se lee de la misma forma desde la izquierda y desde la derecha.
->>>>>>> fa4768e2169e3e5ddfe501b369f2ae886f6ff686
+
+un palíndromo, es decir, si se lee de la misma forma desde la izquierda y desde la derecha.
+
 Ejemplo de palíndromo complejo: "La ruta nos aporto otro paso natural".
 
     </h2>
@@ -129,7 +129,7 @@ Ejemplo de palíndromo complejo: "La ruta nos aporto otro paso natural".
     <button onclick="ejercicio8()">Ejecutar 8</button>
     <script src="index.js"></script>
 
-<<<<<<< HEAD
+
     <h2>
         EJERCICIO 10
 Escribir un script que simule el lanzamiento de dos dados. Hacer uso de la función
@@ -142,7 +142,6 @@ número de apariciones de dicha suma, repitiendo 36.000 veces esta operación.
     <script src="index.js"></script>
 
 
-=======
->>>>>>> fa4768e2169e3e5ddfe501b369f2ae886f6ff686
+
 </body>
 </html>
